@@ -6,8 +6,6 @@ ffmpegfs TODOs
 * Add intelligent stream copy, e.g., if transcoding a transport stream
   that already represents a H264 video stream it would be possible to
   simply repackage it to a mp4 container without recoding.
-* Add option to deinterlace video if required (will improve picture
-  quality when view in browsers via HTML5.
 * Improve Libav compatibility (maybe it is possible to use Libav 11+?).
 * Add album art support.
 * Improve recoding detection. Currently a file is recoded if the source
